Ajout de tout les informations de l'entreprise.
Clarifier les informations du site comme l'acceuil, les services, contact.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auxilio-Offshoring</title>
+    <title>Auxilio Offshoring</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,22 +24,20 @@
         />
       </div>
       <nav>
-        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">Acceuil</a>
         <a href="#" class="nav-link">Services</a>
-        <a href="#" class="nav-link">About Us</a>
+        <a href="#" class="nav-link">À Propos de nous</a>
         <a href="#" class="nav-link">Contact</a>
       </nav>
     </header>
     <div class="main-content">
       <div class="home">
         <div>
-          <h1>Transforming Business Through <span>Innovation</span></h1>
+          <h1><span>Externalisez</span> vos opérations en toute confiance</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            incidunt optio accusamus explicabo iure in aliquam corrupti mollitia
-            ipsam omnis! Eligendi soluta expedita voluptates cum quia.
-            Reiciendis molestias voluptatum placeat?
+            AOM accompagne les entreprises dans l’externalisation de leurs tâches administratives, documentaires et de support, avec un haut niveau d’exigence en matière de qualité et de fiabilité.
           </p>
+          <p>Devis & Tests gratuits • Sans engagement • Fournis sous 48h</p>
           <button type="button">Nos Services</button>
           <button type="button" id="btn-wht">Nous contacter</button>
         </div>
@@ -56,66 +54,101 @@
 
       <div class="services">
         <div>
-          <h1 class="centered-info">Nos Services</h1>
+          <h1 class="centered-info">Nos services</h1>
           <p class="centered-info">
-            Une large description de nos services. plus quelque autre phrase un
-            peu longue
+            Nos solutions d’externalisation visent à sécuriser, structurer et optimiser vos opérations administratives et documentaires.
           </p>
         </div>
         <div class="service-container">
           <div class="service-content">
-            <h2>Nos Services 1</h2>
+            <h2>Saisie & Traitement de Données</h2>
+            <p>AOM accompagne les entreprises dans le traitement fiable et structuré de leurs données, avec une exigence élevée de précision et de contrôle qualité.</p>
+            <p>Nos prestations couvrent :</p>
+            <ul>
+              <li>La saisie de données</li>
+              <li>Le traitement de documents</li>
+              <li>L'OCR avec relecture humaine</li>
+              <li>La structuration de documents complexes</li>
+              <li>La création et l'enrichissement de bases de données</li>
+            </ul>  
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              incidunt optio accusamus explicabo iure in aliquam corrupti
-              mollitia ipsam omnis! Eligendi soluta expedita voluptates cum
-              quia. Reiciendis molestias voluptatum placeat?
+              Objectif : des données exploitables, cohérentes et sécurisées.
             </p>
           </div>
           <div class="service-content">
-            <h2>Nos Services 2</h2>
+            <h2>Mise en Page & Production Documentaire</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              incidunt optio accusamus explicabo iure in aliquam corrupti
-              mollitia ipsam omnis! Eligendi soluta expedita voluptates cum
-              quia. Reiciendis molestias voluptatum placeat?
+              Nous assurons la mise en forme professionnelle de vos contenus, qu’ils soient destinés à l’impression ou à la diffusion numérique.
             </p>
+            <p>Nos prestations incluent :</p>
+            <ul>
+              <li>Mise en page de livres, romans et documents longs</li>
+              <li>Conception de magazines et supports éditoriaux</li>
+              <li>Mise en page de catalogues commerciaux</li>
+              <li>Adaptation de contenus au format ePub</li>
+              <li>Harmonisation graphique et respect de la charte visuelle</li>
+              <li>Création de couvertures</li>
+            </ul>
+
           </div>
           <div class="service-content">
-            <h2>Nos Services 3</h2>
+            <h2> Traitement & Optimisation d’Images</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              incidunt optio accusamus explicabo iure in aliquam corrupti
-              mollitia ipsam omnis! Eligendi soluta expedita voluptates cum
-              quia. Reiciendis molestias voluptatum placeat?
+              AOM propose des services d’édition d’images adaptés aux besoins éditoriaux et professionnels.
             </p>
+            <p>Nous intervenons notamment sur :</p>
+            <ul>
+              <li>•	Détourage et nettoyage d’images</li>
+              <li>•	Recadrage et redressement</li>
+              <li>•	Optimisation visuelle pour supports imprimés ou numériques</li>
+            </ul> 
+            <p>
+              Objectif : des visuels nets, cohérents et prêts à l’usage.
+            </p> 
+            
           </div>
           <div class="service-content">
-            <h2>Nos Services 4</h2>
+            <h2>Assistance Administrative & Juridique</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              incidunt optio accusamus explicabo iure in aliquam corrupti
-              mollitia ipsam omnis! Eligendi soluta expedita voluptates cum
-              quia. Reiciendis molestias voluptatum placeat?
+              AOM met à disposition une assistance administrative et juridique externalisée, pensée pour les cabinets, directions juridiques et entreprises.
             </p>
+            <p>Nos interventions portent sur :</p>
+            <ul>
+              <li>Rédaction, révision et classement de documents juridiques</li>
+              <li>Gestion électronique de documents</li>
+              <li>Préparation et organisation de dossiers</li>
+              <li>Assistance à la préparation de présentations et supports juridiques</li>
+              <li>Gestion des agendas, rendez-vous et communications</li>
+              <li>Recherche juridique documentaire</li>
+            </ul>
+            <p>Objectif : sécuriser et fluidifier vos opérations administratives et juridiques.</p>
           </div>
           <div class="service-content">
-            <h2>Nos Services 5</h2>
+            <h2> Gestion de la Relation Client (CRM)</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              incidunt optio accusamus explicabo iure in aliquam corrupti
-              mollitia ipsam omnis! Eligendi soluta expedita voluptates cum
-              quia. Reiciendis molestias voluptatum placeat?
+              Nous accompagnons les entreprises dans la structuration et le suivi de leur relation client.
             </p>
+            <p>Nos prestations incluent :</p>
+            <ul>
+              <li>Collecte et structuration des données clients</li>
+              <li>Suivi et traçabilité des interactions</li>
+              <li>Gestion des demandes, retours et réclamations</li>
+              <li>Mise en place d’actions de fidélisation</li>
+            </ul>
+            <p>Objectif : une relation client organisée, suivie et durable.</p>
           </div>
           <div class="service-content">
-            <h2>Nos Services 6</h2>
+            <h2>Collecte & Classement d’Informations</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-              incidunt optio accusamus explicabo iure in aliquam corrupti
-              mollitia ipsam omnis! Eligendi soluta expedita voluptates cum
-              quia. Reiciendis molestias voluptatum placeat?
+            AOM assure l’intégration et l’organisation d’informations issues de différents supports.
             </p>
+            <p>Nous intervenons sur :</p>
+            <ul>
+              <li>Collecte de données à partir de supports physiques</li>
+              <li>Intégration de données issues de supports numériques</li>
+              <li>Classement et structuration pour exploitation ultérieure</li>
+            </ul>
+            <p>Objectif : transformer l’information brute en ressources structurées.</p>
           </div>
         </div>
       </div>
@@ -130,32 +163,39 @@
           />
         </div>
         <div>
-          <h1>À Propos De Nous</h1>
+          <h1>À Propos de nous</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            incidunt optio accusamus explicabo iure in aliquam corrupti mollitia
-            ipsam omnis! Eligendi soluta expedita voluptates cum quia.
-            Reiciendis molestias voluptatum placeat?
+            AOM est une société de services spécialisée dans l’externalisation de tâches administratives, documentaires et de support, destinée aux entreprises souhaitant confier leurs opérations à un partenaire fiable et structuré.
+          </p>
+          <p>
+            Notre activité repose sur une expérience concrète du fonctionnement de l’offshore, ainsi que sur une exigence constante en matière de :
           </p>
           <ol>
-            <li>Mission</li>
-            <li>Vision</li>
-            <li>Valeurs</li>
+            <li>qualité de traitement</li>
+            <li>fiabilité </li>
+            <li>confidentialité</li>
           </ol>
+          <p>
+              Chez AOM, chaque mission est traitée avec rigueur et méthode. Nous mettons en place des processus clairs, un suivi attentif des prestations et des contrôles réguliers afin d’assurer des livrables cohérents, précis et conformes aux attentes du client.
+          </p>
+          <p>
+            Notre objectif est de satisfaire nos clients, mais également de faire évoluer continuellement nos pratiques, de monter en compétence et de nous positionner progressivement comme un acteur de référence sur notre marché. Cette démarche d’amélioration continue nous permet d’accompagner nos clients dans la durée et de grandir avec eux
+          </p>
+          <p>
+            Afin de permettre une collaboration en toute transparence, AOM propose des devis clairs ainsi que des tests gratuits, permettant d’évaluer la qualité de nos prestations avant tout engagement.
+          </p>
         </div>
       </div>
       <div class="contact">
         <h1 class="centered-info">Contactez-Nous</h1>
         <p class="centered-info">
-          Ready to start your project? Contact us today and let's discuss how we
-          can help your business grow.
+          Une question, un besoin ou un projet ? Contactez-nous dès maintenant et notre équipe vous répondra dans les plus brefs délais.
         </p>
         <div class="contact-container">
           <div>
             <h2>Contact Information</h2>
             <p>
-              We're here to answer any questions you may have. Reach out to us
-              and we'll respond as soon as we can.
+              Nous restons à votre disposition pour toute demande d’information.
             </p>
             <div class="contact-info">
               <div>
@@ -164,7 +204,7 @@
                   alt=""
                   width="30px"
                 />
-                <p>Phone <span class="block">+123 456 7890</span></p>
+                <p>Phone <span class="block">+261 34 54 821 19</span></p>
               </div>
               <div>
                 <img
@@ -172,7 +212,7 @@
                   alt=""
                   width="30px"
                 />
-                <p>Mail <span class="block">contact@company.com</span></p>
+                <p>Mail <span class="block">contact@aoms-mg.com</span></p>
               </div>
               <div>
                 <img
@@ -181,27 +221,27 @@
                   width="30px"
                 />
                 <p>
-                  Address <span class="block">123 Main St, City, Country</span>
+                  Address <span class="block">Lot I B 100, 25 Rue de Russie Isoraka, Antananarivo 101, Madagascar</span>
                 </p>
               </div>
             </div>
           </div>
           <div class="form">
             <form action="#">
-              <h2>Name</h2>
-              <input type="text" name="name" placeholder="Your Name" required />
-              <h2>Email</h2>
+              <h2>Nom</h2>
+              <input type="text" name="name" placeholder="Votre Nom" required />
+              <h2>E-mail</h2>
               <input
                 type="email"
                 name="email"
-                placeholder="Your Email"
+                placeholder="Votre E-mail"
                 required
               />
               <h2>Message</h2>
               <textarea
                 name="message"
                 rows="5"
-                placeholder="Your Message"
+                placeholder="Votre Message"
                 required
               ></textarea>
               <button type="submit">Submit</button>
@@ -215,32 +255,31 @@
         <div id="grow">
           <h2 class="blue">AOM Services</h2>
           <p class="white">
-            Transforming businesses through innovative technology solutions.
-            Your trusted partner for digital success.
+            Auxilio Offshoring Madagascar
           </p>
         </div>
 
         <div>
-          <h2 class="light-white">Quick Links</h2>
+          <h2 class="light-white">Liens rapides</h2>
           <ul>
-            <li><a href="#" class="white">Home</a></li>
+            <li><a href="#" class="white">Acceuil</a></li>
             <li><a href="#" class="white">Services</a></li>
-            <li><a href="#" class="white">About Us</a></li>
+            <li><a href="#" class="white">À propos de nous</a></li>
             <li><a href="#" class="white">Contact</a></li>
           </ul>
         </div>
         <div>
-          <h2 class="light-white">Contact Us</h2>
-          <p class="white">123 Main St, City, Country</p>
-          <p class="white">Phone: +123 456 7890</p>
-          <p class="white">Email: contact@company.com</p>
+          <h2 class="light-white">Contactez-nous</h2>
+          <p class="white"> Lot I B 100, 25 Rue de Russie Isoraka, Antananarivo 101, Madagascar</p>
+          <p class="white">Phone: +261 34 54 821 19</p>
+          <p class="white">Email: contact@aoms-mg.com</p>
         </div>
       </div>
       <p class="white" style="text-align: center">
-        &copy; 2024 Auxilio-Offshoring. All rights reserved.
+        &copy; 2024 Auxilio Offshoring. All rights reserved.
       </p>
     </footer>
-    <div class="backgroundx">
+    <div class="background">
       <span></span>
       <span></span>
       <span></span>
